--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 opt-level = 3
 
 [dependencies]
+bitflags = "2.6.0"
+bitfrob = "1.3.2"
 voladdress = "1.4.0"
+
+[build-dependencies]
+embedded-graphics = "0.8.1"
+tinybmp = "0.6.0"
